[package]
name = "recovery_sectors"
version = "0.1.0"
authors = ["eddyguo <edddyguo@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "a tool of rebuild sectors"
repository = "https://github.com/rust-lang/cargo/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.9.1"
sled = "0.34.6"
bincode = "1.3.2"
log = "0.4.0"
env_logger = "0.7.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
lazy_static = "1.3.0"
rayon = "1.3.0"
anyhow = "1.0.41"




